--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -1,3 +1,8 @@
 app_homepage:
     path:     /
-    defaults: { _controller: AppBundle:Default:index }
+    defaults: { _controller: AppBundle:Movie:index }
+
+movie_detail:
+    path:     /
+    defaults: { _controller: AppBundle:Movie:index }
+
