Ajout de critiques de film
Ajout de critiques de film sur la page de détail d'un film
Fonctions d'administrations relatives aux critiques

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -27,3 +27,19 @@ admin_movie_delete:
 admin_movie_list:
     path:     /admin/movie_list
     defaults: { _controller: AppBundle:AdminMovie:list }
+
+admin_review_edit:
+    path:     /admin/{id}/review_edit
+    defaults: { _controller: AppBundle:AdminReview:edit }
+    requirements:
+              id: '\d+'
+
+admin_review_delete:
+    path:     /admin/{id}/review_delete
+    defaults: { _controller: AppBundle:AdminReview:delete }
+    requirements:
+              id: '\d+'
+
+admin_review_list:
+    path:     /admin/review_list
+    defaults: { _controller: AppBundle:AdminReview:list }
